--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,5 +2,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+
+    <ListView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/title">
+        
+    </ListView>
     
 </LinearLayout>
