--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,4 +1,4 @@
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
@@ -10,4 +10,21 @@
         
     </ListView>
     
-</LinearLayout>
+    <ProgressBar
+    android:id="@+id/progress"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:layout_centerVertical="true"/>
+
+    <Button
+        android:id="@+id/reload"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/progress"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"
+        android:text="Reload" />
+    
+</RelativeLayout>
