Standarized buttons size

--- a/res/layout/web_frag.xml
+++ b/res/layout/web_frag.xml
@@ -20,7 +20,7 @@
 <Button
     android:id="@+id/back"
     style="?android:attr/buttonStyleSmall"
-    android:layout_width="wrap_content"
+    android:layout_width="100dp"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
@@ -30,7 +30,7 @@
 <Button
     android:id="@+id/forward"
     style="?android:attr/buttonStyleSmall"
-    android:layout_width="wrap_content"
+    android:layout_width="100dp"
     android:layout_height="wrap_content"
     android:layout_alignParentRight="true"
     android:layout_alignParentTop="true"
@@ -40,7 +40,7 @@
 <Button
     android:id="@+id/refresh"
     style="?android:attr/buttonStyleSmall"
-    android:layout_width="wrap_content"
+    android:layout_width="100dp"
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:onClick="refresh"
