--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,16 +1,14 @@
-<resources>
-
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Application theme. -->
-    <!-- 
-	<style name = "ActionBar"
-	    parent = "@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-	    <item name = "android:background">@drawable/actionbar_background</item>
-	    
-	</style> -->
+	<style name = "UTTheme"
+	    parent = "@style/Theme.AppCompat">
+	    <item name = "android:actionBarStyle">@style/UTActionBar</item>
+	    <item name = "actionBarStyle">@style/UTActionBar</item>
+	</style>
+	
+	<style name="UTActionBar" parent="@style/Widget.AppCompat.ActionBar">
+	    <item name="android:background">#BF5700</item>
+	</style>
 
 </resources>
