--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -6,6 +6,7 @@
     <AutoCompleteTextView 
         android:layout_width="fill_parent"
         android:layout_height="50dp"
+        android:imeOptions="actionDone"
         android:id="@+id/mapSearch"/>
 
     <fragment
