--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -6,5 +6,13 @@
             android:defaultValue = "4"
             android:entryValues="@array/selection"
             android:entries="@array/maptypes"
-            ></ListPreference>
+            >
+    </ListPreference>
+    
+    <CheckBoxPreference
+        android:key="notification"
+        android:title="News update"
+        android:defaultValue="true">
+    </CheckBoxPreference>
+    
 </PreferenceScreen>
