Added displaying of traffic option

--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -11,6 +11,11 @@
 	            android:entries="@array/maptypes"
 	            >
 	    </ListPreference>
+	    <CheckBoxPreference 
+	        android:key = "traffic"
+	        android:title = "Real time traffic"
+	        android:defaultValue = "false">
+	    </CheckBoxPreference>
     </PreferenceCategory>
     
     <PreferenceCategory 
