--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -7,6 +7,7 @@
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:imeOptions="actionDone"
+        android:singleLine="true"
         android:id="@+id/mapSearch"/>
 
     <fragment
